@@ -1,8 +1,19 @@
-FROM maven:3.9-amazoncorretto-17
-
+# Build stage
+FROM maven:3.9-amazoncorretto-17 AS build
 LABEL authors="Jiayue, Santtu, Armas"
+WORKDIR /app
+COPY pom.xml .
+COPY . .
+ARG SKIP_CREDENTIALS=false
+RUN mvn dependency:copy-dependencies -DoutputDirectory=target/dependency
+RUN mvn package -DskipTests
 
-# required graphics libraries for JavaFX
+# Runtime stage
+FROM amazoncorretto:17
+WORKDIR /app
+VOLUME /app/credentials
+
+# Graphics libraries for JavaFX
 RUN yum update -y && yum install -y \
     libX11 \
     libXext \
@@ -12,14 +23,17 @@ RUN yum update -y && yum install -y \
     gtk3 \
     xorg-x11-server-Xorg \
     && yum clean all
+RUN if [ "$SKIP_CREDENTIALS" = "false" ]; then \
+      mkdir -p /app/credentials; \
+    fi
 
-WORKDIR /app
 
-COPY pom.xml /app/
+COPY --from=build /app/target/studyshelf.jar /app/
+COPY --from=build /app/target/dependency /app/dependency
+COPY --from=build /root/.m2/repository/org/openjfx /app/javafx-libs
 
-COPY . /app/
+# Display environment variable
+ENV DISPLAY=host.docker.internal:0
 
-RUN mvn package
-
-CMD ["java", "-jar", "target/studyshelf.jar"]
-
+# Run
+CMD ["java", "--module-path", "/app/javafx-libs/javafx-controls/20.0.1:/app/javafx-libs/javafx-graphics/20.0.1:/app/javafx-libs/javafx-base/20.0.1:/app/javafx-libs/javafx-fxml/20.0.1", "--add-modules", "javafx.controls,javafx.fxml", "-jar", "studyshelf.jar"]
